Updates from Overleaf

--- a/architectural design specification latex/tex/x_layer_subsystems.tex
+++ b/architectural design specification latex/tex/x_layer_subsystems.tex
@@ -145,6 +145,7 @@ Each of the inputs and outputs for the subsystem are defined here. Create a tabl
 \end{table}
 
 \subsection{Add Item}
+Add Item allows the user to add the items with the description of its different attributes. Attributes like name of product, brand name, manufacture date, best by date and size of product.
 
 
 \begin{figure}[h!]
