--- a/architectural design specification latex/architectural_design_specification.tex
+++ b/architectural design specification latex/architectural_design_specification.tex
@@ -27,7 +27,7 @@
 
 %%% Definitions
 \definecolor{accentcolor}{rgb}{0.0,0.0,0.5} 
-\newcommand{\teamname}{Nepster}
+\newcommahnd{\teamname}{Nepster}
 \newcommand{\productname}{Pocket Self}
 \newcommand{\coursename}{CSE 4316: Senior Design I}
 \newcommand{\semester}{Summer 2019}
