Updates from Overleaf

--- a/architectural design specification latex/tex/data_flow.tex
+++ b/architectural design specification latex/tex/data_flow.tex
@@ -2,6 +2,6 @@
 
 \begin{figure}[h!]
 	\centering
- 	\includegraphics[width=\textwidth]{images/data_flow}
+ 	\includegraphics[width=\textwidth]{images/dataflow}
  \caption{A simple data flow diagram}
 \end{figure}
