--- a/architectural design specification latex/tex/x_layer_subsystems.tex
+++ b/architectural design specification latex/tex/x_layer_subsystems.tex
@@ -5,7 +5,7 @@ This is the first sub section that user interacts with. When the user opens the 
 
 \begin{figure}[h!]
 	\centering
- 	\includegraphics[width=0.60\textwidth]{images/subsystem}
+ 	\includegraphics[width=0.60\textwidth]{images/uicontroller}
  \caption{Example subsystem description diagram}
 \end{figure}
 
@@ -41,7 +41,7 @@ Each of the inputs and outputs for the subsystem are defined here. Create a tabl
 
 \begin{figure}[h!]
 	\centering
- 	\includegraphics[width=0.60\textwidth]{images/subsystem}
+ 	\includegraphics[width=0.60\textwidth]{images/login}
  \caption{Example subsystem description diagram}
 \end{figure}
 
@@ -77,7 +77,7 @@ Each of the inputs and outputs for the subsystem are defined here. Create a tabl
 
 \begin{figure}[h!]
 	\centering
- 	\includegraphics[width=0.60\textwidth]{images/subsystem}
+ 	\includegraphics[width=0.60\textwidth]{images/register}
  \caption{Example subsystem description diagram}
 \end{figure}
 
@@ -113,7 +113,7 @@ Each of the inputs and outputs for the subsystem are defined here. Create a tabl
 
 \begin{figure}[h!]
 	\centering
- 	\includegraphics[width=0.60\textwidth]{images/subsystem}
+ 	\includegraphics[width=0.60\textwidth]{images/addshelf}
  \caption{Example subsystem description diagram}
 \end{figure}
 
@@ -150,7 +150,7 @@ Add Item allows the user to add the items with the description of its different 
 
 \begin{figure}[h!]
 	\centering
- 	\includegraphics[width=0.60\textwidth]{images/subsystem}
+ 	\includegraphics[width=0.60\textwidth]{images/additem}
  \caption{Example subsystem description diagram}
 \end{figure}
 
@@ -186,7 +186,7 @@ Each of the inputs and outputs for the subsystem are defined here. Create a tabl
 
 \begin{figure}[h!]
 	\centering
- 	\includegraphics[width=0.60\textwidth]{images/subsystem}
+ 	\includegraphics[width=0.60\textwidth]{images/search}
  \caption{Example subsystem description diagram}
 \end{figure}
 
