--- a/architectural design specification latex/tex/system_overview.tex
+++ b/architectural design specification latex/tex/system_overview.tex
@@ -3,7 +3,7 @@ PocketShelf is an inventory IOS/Android application. Our application consist of 
 
 \begin{figure}[h!]
 	\centering
- 	\includegraphics[width=0.60\textwidth]{images/layers}
+ 	\includegraphics[width=0.90\textwidth]{images/overview}
  \caption{A simple architectural layer diagram}
 \end{figure}
 
