--- a/architectural design specification latex/tex/system_overview.tex
+++ b/architectural design specification latex/tex/system_overview.tex
@@ -11,7 +11,7 @@ PocketShelf is an inventory IOS/Android application. Our application consist of 
 UI is the graphic feature of the application mainly responsible for the displaying information and interact with the user. UI consist of login subsystem responsible for taking userid and password from user. Registration subsystem is responsible to take userid, email, password, full name from the user. Add\_Shelf subsystem is responsible for taking the shelf description from the user. Add\_Item is responsible for taking item description from user. Search subsystem is responsible for taking user input via QR code or input text. After any kind input and options chosen by the user UI\_Controller will send all user input and the option chosen by the user to Business\_Controller in Business\_Logic. UI\_Controller also accept the input messages from the Business\_Controller, stating successful completion of the chosen task by the user.
 
 \subsection{Business\_Logic}
-Business\_Logic is the logical controller for the application. It is responsible for taking input fro UI\_Controller, work accordingly based on the input given by UI\_Controller and work with DB\_Controller. If the UI\_Controller get any kind of input from user it validate it in order to prevent SQL injections and prevent all sort of the invalid input that can be given by the user before sending it to DB\_Controller. If UI\_Controller sends the item description to add to the shelf, it will create QR for the entry, append it with the description and forward it to DB\_Controller to save it to Database. If UI\_Controller sends any item information to search from database, Business\_Logic will validate the input and the sends the item description to the DB\_Controller, once item is retrieve and received by Business\_Logic it fetch the image associated to the item and sends that image to UI\_Controller which is shown to the user.
+Business\_Logic is the logical controller for the application. It is responsible for taking input from UI\_Controller, work accordingly based on the input given by UI\_Controller and work with DB\_Controller. If the UI\_Controller get any kind of input from user it validate it in order to prevent SQL injections and prevent all sort of the invalid input that can be given by the user before sending it to DB\_Controller. If UI\_Controller sends the item description to add to the shelf, it will create QR for the entry, append it with the description and forward it to DB\_Controller to save it to Database. If UI\_Controller sends any item information to search from database, Business\_Logic will validate the input and the sends the item description to the DB\_Controller, once item is retrieve and received by Business\_Logic it fetch the image associated to the item and sends that image to UI\_Controller which is shown to the user.
 
 
 \subsection{Database}
