--- a/architectural design specification latex/tex/x_layer_subsystems.tex
+++ b/architectural design specification latex/tex/x_layer_subsystems.tex
@@ -12,7 +12,7 @@ This is the first sub section that user interacts with. When the user opens the 
 \subsubsection{Assumptions}
 Following assumptions are made for this SubSystem:
 \begin{itemize}
-    \item 
+    \item The System must get the item information from the user and send it to the UI Controller.
 \end{itemize}
 
 \subsubsection{Responsibilities}
