--- a/architectural design specification latex/tex/x_layer_subsystems.tex
+++ b/architectural design specification latex/tex/x_layer_subsystems.tex
@@ -6,13 +6,13 @@ This is the first sub section that user interacts with. When the user opens the 
 \begin{figure}[h!]
 	\centering
  	\includegraphics[width=0.60\textwidth]{images/uicontroller}
- \caption{Example subsystem description diagram}
+ \caption{UI Controller description diagram}
 \end{figure}
 
 \subsubsection{Assumptions}
 Following assumptions are made for this SubSystem:
 \begin{itemize}
-    \item The System must get the item information from the user and send it to the UI Controller.
+    \item 
 \end{itemize}
 
 \subsubsection{Responsibilities}
@@ -42,7 +42,7 @@ Each of the inputs and outputs for the subsystem are defined here. Create a tabl
 \begin{figure}[h!]
 	\centering
  	\includegraphics[width=0.60\textwidth]{images/login}
- \caption{Example subsystem description diagram}
+ \caption{Login description diagram}
 \end{figure}
 
 \subsubsection{Assumptions}
@@ -82,7 +82,7 @@ Each of the inputs and outputs for the subsystem are defined here. An entry for 
 \begin{figure}[h!]
 	\centering
  	\includegraphics[width=0.60\textwidth]{images/register}
- \caption{Example subsystem description diagram}
+ \caption{Register description diagram}
 \end{figure}
 
 \subsubsection{Assumptions}
@@ -110,8 +110,8 @@ Each of the inputs and outputs for the subsystem are defined here. Create a tabl
     \begin{tabular}{ | p{1cm} | p{6cm} | p{3cm} | p{3cm} |}
     \hline
     ID & Description & Inputs & Outputs \\ \hline
-    \#xx & Register & \pbox{3cm}{user} & \pbox{3cm}{output 1}  \\ \hline
-    \#xx & Register & \pbox{3cm}{N/A} & \pbox{3cm}{output 1}  \\ \hline
+    \#3 & Register & \pbox{3cm}{user} & \pbox{3cm}{user information}  \\ \hline
+    \#4 & Register & \pbox{3cm}{N/A} & \pbox{3cm}{msg from the controller}  \\ \hline
     \end{tabular}
 \end{center}
 \end{table}
@@ -123,7 +123,7 @@ Each of the inputs and outputs for the subsystem are defined here. Create a tabl
 \begin{figure}[h!]
 	\centering
  	\includegraphics[width=0.60\textwidth]{images/addshelf}
- \caption{Example subsystem description diagram}
+ \caption{Add Shelf description diagram}
 \end{figure}
 
 \subsubsection{Assumptions}
@@ -150,8 +150,8 @@ Each of the inputs and outputs for the Add shelf subsystem are defined here.
     \begin{tabular}{ | p{1cm} | p{6cm} | p{3cm} | p{3cm} |}
     \hline
     ID & Description & Inputs & Outputs \\ \hline
-    \#xx & Add shelf & \pbox{3cm}{input 1 \\ input 2} & \pbox{3cm}{output 1}  \\ \hline
-    \#xx & Add shelf & \pbox{3cm}{N/A} & \pbox{3cm}{output 1}  \\ \hline
+    \#5 & Add shelf & \pbox{3cm}{user} & \pbox{3cm}{Shelf information}  \\ \hline
+    \#6 & Add shelf & \pbox{3cm}{N/A} & \pbox{3cm}{msg from the UI controller}  \\ \hline
     \end{tabular}
 \end{center}
 \end{table}
@@ -163,7 +163,7 @@ Add Item allows the user to add the items with the description of its different 
 \begin{figure}[h!]
 	\centering
  	\includegraphics[width=0.60\textwidth]{images/additem}
- \caption{Example subsystem description diagram}
+ \caption{Add Item description diagram}
 \end{figure}
 
 \subsubsection{Assumptions}
@@ -177,7 +177,7 @@ Following assumptions are made about this SubSystem:
 \subsubsection{Responsibilities}
 These are the following responsibilities of this subsystem:
 \begin{itemize}
-    \item 
+    \item The system must get the detailed information from the user and send it to the UI Controller.
 \end{itemize}
 
 \subsubsection{Subsystem Interfaces}
@@ -189,8 +189,8 @@ Each of the inputs and outputs for the subsystem are defined here. Create a tabl
     \begin{tabular}{ | p{1cm} | p{6cm} | p{3cm} | p{3cm} |}
     \hline
     ID & Description & Inputs & Outputs \\ \hline
-    \#xx & Add Item & \pbox{3cm}{input 1 \\ input 2} & \pbox{3cm}{output 1}  \\ \hline
-    \#xx & Add Item & \pbox{3cm}{N/A} & \pbox{3cm}{output 1}  \\ \hline
+    \#7 & Add Item & \pbox{3cm}{user} & \pbox{3cm}{Item Information}  \\ \hline
+    \#8 & Add Item & \pbox{3cm}{N/A} & \pbox{3cm}{msg from the controller}  \\ \hline
     \end{tabular}
 \end{center}
 \end{table}
@@ -227,8 +227,8 @@ Each of the inputs and outputs for the subsystem are defined here. Create a tabl
     \begin{tabular}{ | p{1cm} | p{6cm} | p{3cm} | p{3cm} |}
     \hline
     ID & Description & Inputs & Outputs \\ \hline
-    \#xx & Search & \pbox{3cm}{input 1 \\ input 2} & \pbox{3cm}{output 1}  \\ \hline
-    \#xx & Search & \pbox{3cm}{N/A} & \pbox{3cm}{output 1}  \\ \hline
+    \#9 & Search & \pbox{3cm}{user} & \pbox{3cm}{barcode // text}  \\ \hline
+    \#10 & Search & \pbox{3cm}{N/A} & \pbox{3cm}{msg from the UI Controller}  \\ \hline
     \end{tabular}
 \end{center}
 \end{table}
