--- a/architectural design specification latex/tex/y_layer_subsystems.tex
+++ b/architectural design specification latex/tex/y_layer_subsystems.tex
@@ -39,8 +39,8 @@ Each of the inputs and outputs for the subsystem are defined here.
     \begin{tabular}{ | p{1cm} | p{6cm} | p{3cm} | p{3cm} |}
     \hline
     ID & Description & Inputs & Outputs \\ \hline
-    \#xx & Description of the interface/bus & \pbox{3cm}{input 1 \\ input 2} & \pbox{3cm}{output 1}  \\ \hline
-    \#xx & Description of the interface/bus & \pbox{3cm}{N/A} & \pbox{3cm}{output 1}  \\ \hline
+    \#1 & Business Controller & \pbox{3cm}{Login data \\ Registration data\\add item data\\ add shelf data\\search data} & \pbox{3cm}{\\}  \\ \hline
+    \#2 & Description of the interface/bus & \pbox{3cm}{N/A} & \pbox{3cm}{output 1}  \\ \hline
     \end{tabular}
 \end{center}
 \end{table}
@@ -62,10 +62,10 @@ AR generator is the part of Business logic that generates AR when a customer wan
 \end{itemize}
 
 \subsubsection{Responsibilities}
-Each of the responsibilities/features/functions/services of the subsystem as identified in the architectural summary must be expanded to more detailed responsibilities. These responsibilities form the basis for the identification of the finer-grained responsibilities of the layer's internal subsystems. Clearly describe what each subsystem does.
+AR generator produces the AR and when a customer scans a bar-code for the item he is searching, the program will display the AR on the Bar-code.
 
 \subsubsection{Subsystem Interfaces}
-Each of the inputs and outputs for the subsystem are defined here. Create a table with an entry for each labelled interface that connects to this subsystem. For each entry, describe any incoming and outgoing data elements will pass through this interface.
+
 
 \begin {table}[H]
 \caption {Subsystem interfaces} 
@@ -80,7 +80,7 @@ Each of the inputs and outputs for the subsystem are defined here. Create a tabl
 \end{table}
 
 \subsection{QR Generator}
-This section should be a general description of a particular subsystem for the given layer. For most subsystems, an extract of the architectural block diagram with data flows is useful. This should consist of the subsystem being described and those subsystems with which it communicates.
+Based on description of the item customer provides, QR generator generate QR.This QR is then store in the database along with the  description of the item.
 
 \begin{figure}[h!]
 	\centering
@@ -89,13 +89,16 @@ This section should be a general description of a particular subsystem for the g
 \end{figure}
 
 \subsubsection{Assumptions}
-Any assumptions made in the definition of the subsystem should be listed and described. Pay particular attention to assumptions concerning interfaces and interactions with other layers.
+\begin{itemize}
+    \item Customer inputs the right description of the item to  that is to be stored in inventory.
+    \item Item should be new to the inventory.
+    
+\end{itemize}
 
 \subsubsection{Responsibilities}
-Each of the responsibilities/features/functions/services of the subsystem as identified in the architectural summary must be expanded to more detailed responsibilities. These responsibilities form the basis for the identification of the finer-grained responsibilities of the layer's internal subsystems. Clearly describe what each subsystem does.
+QR generator is responsible of generating new QR for each new item that is being added to the inventory. This shall help in giving new identity to the item that is to be stored as well as make it easy to access the item stored in the inventory.
 
 \subsubsection{Subsystem Interfaces}
-Each of the inputs and outputs for the subsystem are defined here. Create a table with an entry for each labelled interface that connects to this subsystem. For each entry, describe any incoming and outgoing data elements will pass through this interface.
 
 \begin {table}[H]
 \caption {Subsystem interfaces} 
