all diagram added

--- a/architectural design specification latex/tex/x_layer_subsystems.tex
+++ b/architectural design specification latex/tex/x_layer_subsystems.tex
@@ -6,7 +6,7 @@ This is the first sub section that user interacts with. When the user opens the 
 \begin{figure}[h!]
 	\centering
  	\includegraphics[width=0.60\textwidth]{images/uicontroller}
- \caption{Example subsystem description diagram}
+ \caption{UI Controller description diagram}
 \end{figure}
 
 \subsubsection{Assumptions}
@@ -42,7 +42,7 @@ Each of the inputs and outputs for the subsystem are defined here. Create a tabl
 \begin{figure}[h!]
 	\centering
  	\includegraphics[width=0.60\textwidth]{images/login}
- \caption{Example subsystem description diagram}
+ \caption{Login description diagram}
 \end{figure}
 
 \subsubsection{Assumptions}
@@ -82,7 +82,7 @@ Each of the inputs and outputs for the subsystem are defined here. An entry for 
 \begin{figure}[h!]
 	\centering
  	\includegraphics[width=0.60\textwidth]{images/register}
- \caption{Example subsystem description diagram}
+ \caption{Register description diagram}
 \end{figure}
 
 \subsubsection{Assumptions}
@@ -123,7 +123,7 @@ Each of the inputs and outputs for the subsystem are defined here. Create a tabl
 \begin{figure}[h!]
 	\centering
  	\includegraphics[width=0.60\textwidth]{images/addshelf}
- \caption{Example subsystem description diagram}
+ \caption{Adding Shelf description diagram}
 \end{figure}
 
 \subsubsection{Assumptions}
@@ -163,7 +163,7 @@ Add Item allows the user to add the items with the description of its different 
 \begin{figure}[h!]
 	\centering
  	\includegraphics[width=0.60\textwidth]{images/additem}
- \caption{Example subsystem description diagram}
+ \caption{Adding items description diagram}
 \end{figure}
 
 \subsubsection{Assumptions}
@@ -201,7 +201,7 @@ Each of the inputs and outputs for the subsystem are defined here. Create a tabl
 \begin{figure}[h!]
 	\centering
  	\includegraphics[width=0.60\textwidth]{images/search}
- \caption{Example subsystem description diagram}
+ \caption{searching item description diagram}
 \end{figure}
 
 \subsubsection{Assumptions}
