--- a/architectural design specification latex/tex/y_layer_subsystems.tex
+++ b/architectural design specification latex/tex/y_layer_subsystems.tex
@@ -6,7 +6,7 @@ Any kind of data coming and going to Business Logic do so through the Business c
 
 \begin{figure}[h!]
 	\centering
- 	\includegraphics[width=0.60\textwidth]{images/captureBusiness}
+ 	\includegraphics[width=0.60\textwidth]{images/businesscontroller}
  \caption{Example subsystem description diagram}
 \end{figure}
 
@@ -50,8 +50,8 @@ AR generator is the part of Business logic that generates AR when a customer wan
 
 \begin{figure}[h!]
 	\centering
- 	\includegraphics[width=0.60\textwidth]{images/subsystem}
- \caption{Example subsystem description diagram}
+ 	\includegraphics[width=0.60\textwidth]{images/argenerator}
+ \caption{AR generator description diagram}
 \end{figure}
 
 \subsubsection{Assumptions}
@@ -84,8 +84,8 @@ This section should be a general description of a particular subsystem for the g
 
 \begin{figure}[h!]
 	\centering
- 	\includegraphics[width=0.60\textwidth]{images/subsystem}
- \caption{Example subsystem description diagram}
+ 	\includegraphics[width=0.60\textwidth]{images/qrgenerator}
+ \caption{QR generator description diagram}
 \end{figure}
 
 \subsubsection{Assumptions}
@@ -114,8 +114,8 @@ This section should be a general description of a particular subsystem for the g
 
 \begin{figure}[h!]
 	\centering
- 	\includegraphics[width=0.60\textwidth]{images/subsystem}
- \caption{Example subsystem description diagram}
+ 	\includegraphics[width=0.60\textwidth]{images/uivalidation}
+ \caption{UI Input Validation description diagram}
 \end{figure}
 
 \subsubsection{Assumptions}
