Updates from Overleaf

--- a/architectural design specification latex/tex/x_layer_subsystems.tex
+++ b/architectural design specification latex/tex/x_layer_subsystems.tex
@@ -70,7 +70,7 @@ Each of the inputs and outputs for the subsystem are defined here. An entry for 
     \begin{tabular}{ | p{1cm} | p{6cm} | p{3cm} | p{3cm} |}
     \hline
     ID & Description & Inputs & Outputs \\ \hline
-    \#1 & login & \pbox{3cm}{user} & \pbox{3cm}{user id \\ password}  \\ \hline
+    \#1 & User Login Information & \pbox{3cm}{Username Password} & \pbox{3cm}{Login Confirmation msg}  \\ \hline
     \#2 & Login & \pbox{3cm}{N/A} & \pbox{3cm}{msg from UI Controller}  \\ \hline
     \end{tabular}
 \end{center}
