--- a/architectural design specification latex/tex/x_layer_subsystems.tex
+++ b/architectural design specification latex/tex/x_layer_subsystems.tex
@@ -110,8 +110,8 @@ Each of the inputs and outputs for the subsystem are defined here. Create a tabl
     \begin{tabular}{ | p{1cm} | p{6cm} | p{3cm} | p{3cm} |}
     \hline
     ID & Description & Inputs & Outputs \\ \hline
-    \#3 & Register & \pbox{3cm}{user} & \pbox{3cm}{user information}  \\ \hline
-    \#4 & Register & \pbox{3cm}{N/A} & \pbox{3cm}{msg from the controller}  \\ \hline
+    \#3 & User Register Page & \pbox{3cm}{Username,Password,Email,DOB} & \pbox{3cm}{user information}  \\ \hline
+    \#4 & User Register Page & \pbox{3cm}{N/A} & \pbox{3cm}{msg from the controller}  \\ \hline
     \end{tabular}
 \end{center}
 \end{table}
@@ -152,8 +152,8 @@ Each of the inputs and outputs for the Add shelf subsystem are defined here.
     \begin{tabular}{ | p{1cm} | p{6cm} | p{3cm} | p{3cm} |}
     \hline
     ID & Description & Inputs & Outputs \\ \hline
-    \#5 & Add shelf & \pbox{3cm}{user} & \pbox{3cm}{Shelf information}  \\ \hline
-    \#6 & Add shelf & \pbox{3cm}{N/A} & \pbox{3cm}{msg from the UI controller}  \\ \hline
+    \#5 & Add shelf page & \pbox{3cm}{Shelf dimensions} & \pbox{3cm}{Shelf information}  \\ \hline
+    \#6 & Add shelf page & \pbox{3cm}{N/A} & \pbox{3cm}{msg from the UI controller}  \\ \hline
     \end{tabular}
 \end{center}
 \end{table}
@@ -193,8 +193,8 @@ Each of the inputs and outputs for the subsystem are defined here. Create a tabl
     \begin{tabular}{ | p{1cm} | p{6cm} | p{3cm} | p{3cm} |}
     \hline
     ID & Description & Inputs & Outputs \\ \hline
-    \#7 & Add Item & \pbox{3cm}{user} & \pbox{3cm}{Item Information}  \\ \hline
-    \#8 & Add Item & \pbox{3cm}{N/A} & \pbox{3cm}{msg from the controller}  \\ \hline
+    \#7 & Add Item page & \pbox{3cm}{Item name,date,brand} & \pbox{3cm}{Item Information}  \\ \hline
+    \#8 & Add Item page & \pbox{3cm}{N/A} & \pbox{3cm}{msg from the controller}  \\ \hline
     \end{tabular}
 \end{center}
 \end{table}
@@ -231,8 +231,8 @@ Each of the inputs and outputs for the subsystem are defined here. Create a tabl
     \begin{tabular}{ | p{1cm} | p{6cm} | p{3cm} | p{3cm} |}
     \hline
     ID & Description & Inputs & Outputs \\ \hline
-    \#9 & Search & \pbox{3cm}{user} & \pbox{3cm}{barcode // text}  \\ \hline
-    \#10 & Search & \pbox{3cm}{N/A} & \pbox{3cm}{msg from the UI Controller}  \\ \hline
+    \#9 & Search page & \pbox{3cm}{barcode or text} & \pbox{3cm}{item information}  \\ \hline
+    \#10 & Search page & \pbox{3cm}{N/A} & \pbox{3cm}{msg from the UI Controller}  \\ \hline
     \end{tabular}
 \end{center}
 \end{table}
